# ChangeLog for dev-ruby/httparty
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/httparty/ChangeLog,v 1.9 2009/11/29 14:25:50 a3li Exp $

  29 Nov 2009; Alex Legler <a3li@gentoo.org> Manifest:
  Remanifest due to gemcutter changes

*httparty-0.4.5 (03 Oct 2009)

  03 Oct 2009; Alex Legler <a3li@gentoo.org> +httparty-0.4.5.ebuild:
  Version bump

  04 Aug 2009; Hans de Graaff <graaff@gentoo.org> -httparty-0.2.4.ebuild,
  -httparty-0.3.1.ebuild:
  Remove old versions.

*httparty-0.4.4 (04 Aug 2009)

  04 Aug 2009; Hans de Graaff <graaff@gentoo.org> +httparty-0.4.4.ebuild:
  Version bump with minor updates.

  21 May 2009; Brent Baude <ranger@gentoo.org> httparty-0.4.3.ebuild:
  keyworded ~arch for ppc, bug 270038

*httparty-0.4.3 (15 May 2009)

  15 May 2009; Hans de Graaff <graaff@gentoo.org> +httparty-0.4.3.ebuild:
  Version bump. Drop ~ppc due to new dependency on dev-ruby/crack, filed as #270038.

  20 Mar 2009; Joseph Jezak <josejx@gentoo.org> httparty-0.3.1.ebuild:
  Marked ~ppc for bug #252914.

*httparty-0.3.1 (28 Feb 2009)

  28 Feb 2009; Hans de Graaff <graaff@gentoo.org> +httparty-0.3.1.ebuild:
  Version bump.

*httparty-0.2.4 (28 Dec 2008)

  28 Dec 2008; Hans de Graaff <graaff@gentoo.org> +metadata.xml,
  +httparty-0.2.4.ebuild:
  Initial import. New dependency for dev-ruby/twitter.
