@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/httparty
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/httparty/ChangeLog,v 1.9 2009/11/29 14:25:50 a3li Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/httparty/ChangeLog,v 1.10 2010/01/10 08:58:16 graaff Exp $
+
+  10 Jan 2010; Hans de Graaff <graaff@gentoo.org> -httparty-0.4.3.ebuild,
+  -httparty-0.4.4.ebuild:
+  Remove old versions.
 
   29 Nov 2009; Alex Legler <a3li@gentoo.org> Manifest:
   Remanifest due to gemcutter changes
